--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.37", features = ["derive"] }
 crossterm = "0.29.0"
 image = "0.25.6"
+itertools = "0.14.0"
+rand = "0.9.1"
